# BasePlus

./: .editorconfig  .gitignore  .gitmodules  BasePlus.sln  CMakeLists.txt  Prompt.txt  README.md  Requirements.txt  test.cpp
Case/: Case.vcxproj  Case.vcxproj.filters  test.cpp  vcpkg.json
Case/Source/: test.cpp
Core/: Core.vcxproj
Tests/: README.md
apps/app1/: CMakeLists.txt
apps/app1/src/: main.cpp
apps/app2/: CMakeLists.txt
apps/app2/src/: main.cpp
apps/autotask/: CMakeLists.txt
apps/autotask/src/: main.cpp
docs/: README.md
src/Core/: Core.vcxproj
src/common/include/: CommandLineParser.h  QtUtils.h
src/common/src/: CommandLineParser.cpp  QtUtils.cpp
tools/: C++.code-profile  initEnv.bat
